feat: add new mode

--- a/.env
+++ b/.env
@@ -4,13 +4,25 @@ SECRET_KEY=your_secret_key_here
 
 # Trading Configuration
 SYMBOL=BNBUSDT
-LEVERAGE=30
+LEVERAGE=5
 LIQUIDITY_MULTIPLIER=1.2
-BALANCE_PERCENTAGE=20
+BALANCE_PERCENTAGE=10
 
 # Mode Configuration
 TRADING_MODE=single_pair
 HEDGE_MODE=true
+
+# Volume Trading Mode Configuration
+VOLUME_TRADING_MODE=true
+VOLUME_SYMBOL=BNBUSDT
+VOLUME_LEVERAGE=5
+VOLUME_BALANCE_PERCENTAGE=10
+VOLUME_LIQUIDITY_MULTIPLIER=1.2
+MIN_CLOSE_TIME_SEC=30
+MAX_CLOSE_TIME_SEC=300
+MAX_LOSS_USDT=10
+MIN_CYCLE_DELAY_SEC=5
+MAX_CYCLE_DELAY_SEC=20
 
 # API Settings
 BASE_URL=https://fapi.asterdex.com
