feat: fix volume mode

--- a/.env
+++ b/.env
@@ -6,18 +6,13 @@ SECRET_KEY=your_secret_key_here
 SYMBOL=BNBUSDT
 LEVERAGE=5
 LIQUIDITY_MULTIPLIER=1.2
-BALANCE_PERCENTAGE=10
+BALANCE_PERCENTAGE=50
 
-# Mode Configuration
-TRADING_MODE=single_pair
+# Mode Configuration (single_pair or volume)
+TRADING_MODE=volume
 HEDGE_MODE=true
 
-# Volume Trading Mode Configuration
-VOLUME_TRADING_MODE=true
-VOLUME_SYMBOL=BNBUSDT
-VOLUME_LEVERAGE=5
-VOLUME_BALANCE_PERCENTAGE=10
-VOLUME_LIQUIDITY_MULTIPLIER=1.2
+# Volume Trading Mode Settings
 MIN_CLOSE_TIME_SEC=30
 MAX_CLOSE_TIME_SEC=300
 MAX_LOSS_USDT=10
