feat: add dual and new structure

--- a/.env
+++ b/.env
@@ -1,25 +1,56 @@
-# API Configuration
-API_KEY=your_api_key_here
-SECRET_KEY=your_secret_key_here
+# Mode Selection (volume or dual)
+MODE=dual
 
-# Trading Configuration
+# ====================================
+# API CONFIGURATION - ACCOUNT 1
+# ====================================
+API_KEY=your_api_key_here
+API_SECRET=your_api_secret_here
+
+# ====================================
+# API CONFIGURATION - ACCOUNT 2 (for dual mode only)
+# ====================================
+API_KEY2=your_api_key_here
+API_SECRET2=your_api_secret_here
+
+# ====================================
+# COMMON TRADING SETTINGS
+# ====================================
 SYMBOL=BNBUSDT
 LEVERAGE=5
+HEDGE_MODE=true
+
+# Position Sizing
 LIQUIDITY_MULTIPLIER=1.2
 BALANCE_PERCENTAGE=50
 
-# Mode Configuration (single_pair or volume)
-TRADING_MODE=volume
-HEDGE_MODE=true
+# Risk Management
+MAX_LOSS_USDT=100
 
-# Volume Trading Mode Settings
-MIN_CLOSE_TIME_SEC=30
-MAX_CLOSE_TIME_SEC=300
-MAX_LOSS_USDT=10
+# Cycle Delays (seconds)
 MIN_CYCLE_DELAY_SEC=5
-MAX_CYCLE_DELAY_SEC=20
+MAX_CYCLE_DELAY_SEC=15
 
-# API Settings
+# ====================================
+# VOLUME MODE SPECIFIC SETTINGS
+# ====================================
+# Position Hold Time (seconds)
+MIN_CLOSE_TIME_SEC=50
+MAX_CLOSE_TIME_SEC=300
+
+# ====================================
+# DUAL MODE SPECIFIC SETTINGS
+# ====================================
+# Maximum position deviation before closing (%)
+MAX_POSITION_DEVIATION_PERCENT=20
+
+# Position Hold Time (seconds)
+DUAL_MIN_HOLD_TIME_SEC=50
+DUAL_MAX_HOLD_TIME_SEC=300
+
+# ====================================
+# API SETTINGS (optional)
+# ====================================
 BASE_URL=https://fapi.asterdex.com
 REQUEST_TIMEOUT=5
 RETRY_ATTEMPTS=3
